# xil-pipeline

./: .gitignore  .readthedocs.yaml  CLAUDE.md  HOST CHET — WSBS Great Barrington late-n  README.md  XILP000_script_scanner.py  XILP001_script_parser.py  XILP002_producer.py  XILP002_the413_producer.py  XILP003_audio_assembly.py  XILP004_studio_onboard.py  XILP005_daw_export.py  XILP005_the413_daw_export.py  XILP006_cues_ingester.py  XILP007_stem_migrator.py  XILP008_stale_stem_cleanup.py  XILP009_script_regenerator.py  XILP010_studio_import.py  XILP011_master_export.py  XILU002_generate_SFX.py  XILU003_csv_sfx_join.py  XILU004_sample_voices_T2S.py  XILU005_discover_SFX.py  claude-scriptwriter-reference.md  full_sfx_the413_S02E03.json  mix_common.py  models.py  project.json  pyproject.toml  requirements-dev.txt  requirements.txt  sfx_common.py  speakers.json  stem_log_report.csv  timeline_viz.py  www.xilcmd.xyz.html  xilu001.json
.claude/: settings.json
.github/workflows/: publish.yml  test.yml
configs/techdeepdive/: speakers.json
configs/the413/: speakers.json
docs/: CLAUDE.md  README.md  build_docs.py  build_docs_xil_pipeline.py  build_man.py  claude-scriptwriter-reference.md  pipeline.md  sfx-reuse-guide.md
docs/gemini-project/: XILU004_sample_voices_T2S.md
docs/samples/: sample_S01E01.md
docs/scripts/: S03E01_SFX_mapping_notes.md  S03E01_The_Architect_with_SFX_hints.md  revised_the413_S02E03.md  sample_S01E01.md
docs/xil-pipeline/: .pages  XILP000_script_scanner.md  XILP001_script_parser.md  XILP002_the413_producer.md  XILP003_the413_audio_assembly.md  XILP004_the413_studio_onboard.md  XILP005_the413_daw_export.md  XILP006_the413_cues_ingester.md  XILP007_stem_migrator.md  XILP008_stale_stem_cleanup.md  XILP009_script_regenerator.md  XILP010_studio_import.md  XILU001_discover_voices_T2S.md  XILU002_generate_SFX.md  XILU003_csv_sfx_join.md  XILU005_discover_SFX.md  (+4 more)
samples/: Sample_Audiobook.md  project.json
scripts/: build_man.py
tests/: conftest.py  test_audio_assembly.py  test_build_docs.py  test_csv_sfx_join.py  test_cues_ingester.py  test_daw_export.py  test_generate_sfx.py  test_load_speakers.py  test_man_pages.py  test_master_export.py  test_mix_common.py  test_models.py  test_mp3_hash.py  test_producer.py  test_publish.py  test_script_parser.py  test_script_regenerator.py  test_script_scanner.py  test_sfx_common.py  test_splice_parsed.py  test_stale_stem_cleanup.py  test_stem_log.py  test_stem_migrator.py  test_studio_import.py  test_studio_onboard.py  test_timeline_viz.py  test_xil_cli.py  test_xil_gui.py  test_xil_init.py
(+120 files in other folders)
